docs: update endpoints tags and format swaggo comments
